   in 'incoming' (the duplicates in 'incoming' are sometimes created by
   instruments well after the run was mirrored and the runfolder moved to
   'analysis'). The duplicate runfolder in 'incoming' is disregarded'.
 - DRAGEN samplesheet generation - limit analysis to human samples only.
 - Fixed incorrect string comparison in the npg_move_runfolder script.

release 97.0.2
 - pin DBD::mysql to 4.050 to keep temp support for old mysql clients

release 97.0.1
 - update httpd.conf with new values for mpm event

release 97.0.0
 - Change CI workflow to standard file name
 - Change to Perl versions from Perlbrew
 - Add Perl 5.34.1 to the test matrix
 - Switched the default LIMS driver in samplesheet generation from 'xml'
   to 'ml_warehouse'.
 - Added 'lims_driver_type' attribute to npg::samplesheet.
 - Updated the tests for samplesheet generation, which are using the xml
   LIMS driver, to set the driver type explicitly.
 - In samplesheet generation, dropped a special case of MiSeq instruments
   without a batch; last use in production was over 5 years ago.

release 96.0.0
 - Fixed a regression in the npg_move_runfolder script,
   which made it unusable.
 - Rejig run folder tracking function into method
 - Stop using XML LIMS data in a test
 - Import samplesheet daemon
 - Ensure we have a loader to generate ORM classes
 - Flagged planned onboard analysis
 - locate_runfolder: simplify, cope with complex globs, link page for multiple
   locations
 - Allow NovaSeqX samplesheets to embed instrument and slot

release 95.0.0
 - Remove singularity recipe and related files
 - Import mlwh drivers
 - Reimplemented waiting for the onboard analysis
 - Added a samplesheet generator for NovaSeqX

release 94.0.1
 - Fixed bugs in the staging area daemon script:
   - an incorrect method name
   - use of previously deleted method

release 94.0.0
 - Added checks for on-board analysis in progress
 - Improved logging for a long wait case
 - Simplified run complete and mirrored detection